<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <DUT Name="ST120_Alarm_e" Id="{4a0456bd-969f-41d6-a6bc-13812fe6996b}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'to_string'}
TYPE ST120_Alarm_e :
(
    no_error := 0,
    Axis_120_01Y_error := 1,
    Axis_120_02Z_error := 2,
    Cylinder_griper_left := 3,
    Cylinder_griper_right := 4,
    Cylinder_pivot_left := 5,
    Cylinder_pivot_right := 6,
    Cylinder_hublader_left := 7,
    Cylinder_hublader_right := 8,
    Piece_in_unused_griper := 9,
    Piece_missing_left_griper := 10,
    Piece_missing_right_griper := 11,
    Feeder_empty := 12,
    Feeder_error := 13,
    Piece_in_unused_pivot := 14,
    Piece_missing_left_pivot := 15,
    Piece_missing_right_pivor := 16,
	
    _max := 20
) BYTE;
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>